# OniboConverter2

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.ac  container_settings.xml  encoders_table.xml  gui_settings.xml  run.sh
compile/: Makefile.am
data/: Makefile.am  Makefile.in  OniboConverter2.desktop.in  audio_video_settings.xml  converter.glade  dialogs.glade  model1.glade  model2.glade  model5.glade  model5a.glade  user_settings.glade
data/ffpresets/: libvpx-1080p.ffpreset  libvpx-1080p50_60.ffpreset
data/profiles/: profile1.xml  profile2.xml
ffpresets/: libvpx-1080p.ffpreset  libvpx-1080p50_60.ffpreset  libvpx-360p.ffpreset  libvpx-720p.ffpreset  libvpx-720p50_60.ffpreset
graphic/: model1.glade  model2.glade
po/: OniboConverter2.pot  POTFILES.in  sk.po
src/: Makefile.am  Makefile.in  datakeeper.cpp  datakeeper.h  encoders_table.xml  globalsettings.cpp  globalsettings.h  gui_settings.xml  helper.cpp  helper.h  main.cpp  path.cpp  profil.cpp  profil.h  regextools.cpp  settings.h  systemsettings.cpp  systemsettings.h  userpreferences.cpp  userpreferences.h  xmlfilesdefinitions.cpp  xmlfilesdefinitions.h
src/AVBox/: audioformat.cpp  audioformat.h  avbox.cpp  avbox.h  container.cpp  container.h  encoder.cpp  encoder.h  formattoencoders.cpp  formattoencoders.h  guisettings.cpp  guisettings.h  supportedencoders.cpp  supportedencoders.h  videoformat.cpp  videoformat.h
src/Converter/: argument.cpp  argument.h  argumentsgenerator.cpp  argumentsgenerator.h  convertparser.cpp  convertparser.h  convertsettings.cpp  convertsettings.h  dispenser.cpp  dispenser.h  unsupportedencoders.cpp  unsupportedencoders.h
src/ConverterOptions/: bitrate.cpp  bitrate.h  channel.cpp  channel.h  container.cpp  container.h  encoder.cpp  encoder.h  ffpreset.cpp  ffpreset.h  format.cpp  format.h  framerate.cpp  framerate.h  optionsdatabase.cpp  optionsdatabase.h  optionsloader.h  optionsloaderxml.cpp  optionsloaderxml.h  optionsxmlparser.cpp  optionsxmlparser.h  resolution.cpp  resolution.h  samplerate.cpp  samplerate.h  supportedencoders.cpp  supportedencoders.h
src/CppExtension/: hashmap.h  logger.cpp  logger.h  path.cpp  path.h
src/ExternalTools/: supportedencodersloader.cpp  supportedencodersloader.h
src/FFTools/: ffdatamining.cpp  ffdatamining.h  ffpresents.cpp  ffpresents.h  ffpresets.cpp  ffpresets.h  imagecreator.cpp  suportedencoders.cpp  suportedencoders.h
src/Graphic/: containercombobox.cpp  containercombobox.h  encodersdialog.cpp  encodersdialog.h  onibowindow.cpp  onibowindow.h  resolutiondialog.cpp  resolutiondialog.h  settingspart.cpp  videosettings.cpp  videosettings.h
src/Graphic/Widgets/: comboboxtextwraper.h
src/Gui/: avcontrol.cpp  avcontrol.h  basiccontrols.h  comboboxext.h  convertergui.cpp  convertergui.h  convertwindow.cpp  convertwindow.h  destinationcontrol.cpp  destinationcontrol.h  filecontrol.cpp  filecontrol.h  filecontrols.h  findffmpegdialog.cpp  findffmpegdialog.h  findfmpegdialog.cpp  importexport.cpp  importexport.h  infocontrol.cpp  infocontrol.h  mainsettings.cpp  mainsettings.h  mainwindow.cpp  mainwindow.h  manualsettingscontrol.cpp  manualsettingscontrol.h  overwritedialog.cpp  overwritedialog.h  profilenamedialog.cpp  profilenamedialog.h  unencodersdialog.cpp  unencodersdialog.h
src/Gui/Audio/: audiocontrol.cpp  audiocontrol.h  encodercontrola.cpp  encodercontrola.h
src/Gui/Settings/: general.cpp  general.h  subsettings.h  threading.cpp  threading.h  usersettingsdialog.cpp  usersettingsdialog.h
src/Gui/Video/: bitratedialog.cpp  bitratedialog.h  encodercontrol.cpp  encodercontrol.h  encodercontrolv.cpp  encodercontrolv.h  encodersettings.cpp  encodersettings.h  globalvideosettings.cpp  globalvideosettings.h  resolutioncontrol.cpp  resolutioncontrol.h  resolutiondialog.cpp  resolutiondialog.h  videocontrol.cpp  videocontrol.h  videoencodergui.cpp  videoencodergui.h  videoresolutiongui.cpp  videoresolutiongui.h  videosettingsgui.cpp  videosettingsgui.h
src/Gui/WidgetAdapter/: comboboxext.h
src/MediaElement/: audiograde.cpp  audiograde.h  bitrate.cpp  bitrate.h  channel.cpp  channel.h  container.cpp  container.h  elementsdb.cpp  elementsdb.h  elementsrelations.cpp  elementsrelations.h  encoder.cpp  encoder.h  ffpreset.cpp  ffpreset.h  format.cpp  format.h  framerate.cpp  framerate.h  mediaelements.h  resolution.cpp  resolution.h  samplerate.cpp  samplerate.h
src/MediaFile/: audiostream.cpp  audiostream.h  mediaconvert.cpp  mediaconvert.h  mediafile.cpp  mediafile.h  mediafilescanner.cpp  mediafilescanner.h  mediainfo.cpp  mediainfo.h  mediascanner.cpp  mediascanner.h  stream.cpp  stream.h  videostream.cpp  videostream.h
src/MediaInfo/: audiostream.cpp  audiostream.h  infoloader.cpp  infoloader.h  mediafile.cpp  mediafile.h  stream.h  videostream.cpp
src/Process/: processexecutor.cpp  safeinputstream.cpp  safeinputstream.h  safeoutputstream.h  safestream.cpp
src/ProcessExecutor/: process.cpp  process.h  safeinputstream.cpp  safeinputstream.h  safeoutputstream.cpp  safeoutputstream.h  safestream.cpp  safestream.h
src/Profile/: configuration.cpp  configuration.h  profile.cpp  profile.h  profileloader.cpp  profileloader.h  profiles.cpp  profiles.h  xmlprofileparser.cpp  xmlprofileparser.h
src/RegexTools/: regextools.cpp  regextools.h
src/System/: cpu.cpp  cpu.h
src/Tools/: regextools.h  settings.cpp  settings.h  simplememorymanager.h
src/XML/: containersparser.cpp  containersparser.h  encodersparser.cpp  encodersparser.h  guisettingsparser.cpp  guisettingsparser.h
src/Xml/: converttable.h  optionsloaderxml.cpp  optionsloaderxml.h  profilegenerator.cpp  profilegenerator.h  profileloader.cpp  profileloader.h  profileparser.cpp  profileparser.h  profiletoxmlconverter.cpp  profiletoxmlconverter.h  settingsgenerator.cpp  settingsgenerator.h  settingsloader.cpp  settingsloader.h  xmlgenerator.cpp  xmlgenerator.h  xmlparser.cpp  xmlparser.h  xmlprofileparser.cpp  xmlprofileparser.h  xmlprofiletable.cpp  xmlprofiletable.h
src/graphic/: comboboxtextextension.h
(+61 files in other folders)
